--- a/ios/Podfile
+++ b/ios/Podfile
@@ -18,6 +18,8 @@ config = use_native_modules!
 
   pod 'react-native-document-picker', :path => '../node_modules/react-native-document-picker'
 
+  pod 'react-native-image-picker', :path => '../node_modules/react-native-image-picker'
+
   target 'easy_boilerTests' do
     inherit! :complete
     # Pods for testing
