--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-element-dropdown": "^1.5.9",
     "react-native-fontawesome": "^7.0.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-picker": "^4.7.0",
     "react-native-keychain": "4.0.1",
     "react-native-modal": "^13.0.0",
     "react-native-modal-datetime-picker": "^13.0.1",
