--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-native-reanimated": "^2.2.2",
     "react-native-safe-area-context": "^3.3.1",
     "react-native-screens": "^3.7.2",
+    "react-native-tab-bar-footer": "^1.0.5",
     "react-native-tiny-toast": "^1.0.7",
     "react-native-vector-icons": "^8.1.0",
     "react-number-format": "^4.9.1",
