--- a/package.json
+++ b/package.json
@@ -41,20 +41,25 @@
     "react-native-document-picker": "^7.1.3",
     "react-native-element-dropdown": "^1.5.9",
     "react-native-fontawesome": "^7.0.0",
+    "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^4.7.0",
+    "react-native-image-view": "^2.1.9",
     "react-native-keychain": "4.0.1",
     "react-native-modal": "^13.0.0",
     "react-native-modal-datetime-picker": "^13.0.1",
     "react-native-paper": "^4.9.2",
+    "react-native-progress": "^5.0.0",
     "react-native-reanimated": "^2.2.2",
     "react-native-safe-area-context": "^3.3.1",
     "react-native-screens": "^3.7.2",
+    "react-native-svg": "^12.1.1",
     "react-native-tab-bar-footer": "^1.0.5",
     "react-native-tiny-toast": "^1.0.7",
     "react-native-vector-icons": "^8.1.0",
     "react-number-format": "^4.9.1",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
